tests/samename.out
./samename.svx:3:10: error: "42" can't be both a station and a survey
 42       42.1     1.0     90.0    0.0
          ^~
./samename.svx:4:1: error: "42" can't be both a station and a survey
 42.1     42.2     1.0     180.0   0.0
 ^~
./samename.svx:4:10: error: "42" can't be both a station and a survey
 42.1     42.2     1.0     180.0   0.0
          ^~
./samename.svx:5:8: error: "17" can't be both a station and a survey
 *begin 17
        ^~
./samename.svx:6:6: error: "17" can't be both a station and a survey
 *end 17
      ^~

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 4 survey stations, joined by 3 legs.
There are 0 loops.
Total length of survey legs =    3.00m (   3.00m adjusted)
Total plan length of survey legs =    3.00m
Total vertical length of survey legs =    0.00m
Vertical range = 0.00m (from 42.2 at 0.00m to 42.2 at 0.00m)
North-South range = 1.00m (from 42.1 at 1.00m to 42.2 at 0.00m)
East-West range = 1.00m (from 42.2 at 1.00m to 42 at 0.00m)
   2 1-nodes.
   2 2-nodes.
There were 0 warning(s) and 5 error(s) - no output files produced.
