tests/samename.svx
; pos=fail warn=0 error=5
17       42       1.0     0.0     0.0
42       42.1     1.0     90.0    0.0
42.1     42.2     1.0     180.0   0.0
*begin 17
*end 17
*fix 17 0 0 0
